index.css
*{
    background-color:rgb(238, 238, 238);
}

.top-navigation {
    /* width: 100%;
    font-size: 30px;
    /* border: 1px solid black; */
    /* overflow: hidden;
    text-align:center; */ 
     width:800px;
    height: 60px;
    /* font:bold 0/50px Arial; */
    text-align:center;
    margin:40px auto 0;
    /* background:#ebebeb; */
    border-radius: 8px;  
}

.top-navigation a{
    /* font-size: 30px; */
    color: rgb(64,64,64);
   /* text-decoration: none;
    float: left;
    text-align: center;
    padding: 5px;
    margin: auto;
    text-decoration: none;
    text-align: center */
    position:relative;
    display:inline-block;
    padding:0 16px;
    font-size: 30px;
    text-decoration: none;

    
}

.top-navigation a:hover {
    color: rgba(10,10,10,0.5);
    
}

nav.home-navigation {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    z-index: 1;
    margin-top: 100px;
    

}

nav.home-navigation a {
    color: #fff;
    width: 210px;
    height: 420px;
    position: relative ;
    background-color: rgba(10, 10, 10, 0.1);
    margin: 30px;
    border-radius: 15px;
    box-shadow: 20px 20px 50px rgba(0, 0, 0, 0.5);
    overflow: hidden;
    display: flex;
    justify-content: center;
    align-items: center;
    border-top: 1px solid rgba(255, 255, 255, 0.5);
    border-left: 1px solid rgba(255, 255, 255, 0.5);
    backdrop-filter: blur(5px);

}   
nav.home-navigation a:hover {
    color: rgba(10,10,10, 0.5);
    background-color: rgba(10,10,10,0.5);
}

nav.home-navigation a:link {
    color: white;
    text-decoration:none;
}

.social-links {
    position: relative;
    display: flex;
    justify-content: center;
    align-items: center;
    flex-wrap: wrap;
    z-index: 1;
    margin-top: 50px;

}


.social-links a {
    font-size: 50px;
    color: rgba(10, 10, 10, 0.1);
    position: relative ;
    text-align: center;
    margin: 10px;
    text-decoration: none;
}

.social-links a:hover{
    color: rgba(10,10,10,0.5);
}

footer {
    font-size:25px;
    width:500px;
    height: 30px;
    margin-top: 70px;
    margin-left: 690px;
    padding: 10px;
    text-align: center;
    flex: left;
    color: rgb(64,64,64);
}

footer span {
    position:relative;
    display:inline-block;
    margin: 10px;
    padding: 10px;
    text-align: center;
    border: 1px solid black;

}



  

